# OGL

./: .gitignore  CMakeLists.txt  README.md
include/: ogl.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: buffer.cpp  camera.cpp  color.hpp  drawing.cpp  input.cpp  mat3.hpp  ogl.cpp  ogl.hpp  rectangle_packer.hpp  shaders.hpp  textures.cpp  vec2.hpp
src/tests/: test.cpp
tests/: ball.cpp  image_viewer.cpp  sierpinski.cpp  text.cpp
